<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.synerzip.aapoc.MenuActivity">

    <Button
        android:id="@+id/button_open_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottom_sheet"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/common_text_size_14"
        android:onClick="openBottomSheet"/>

    <Button
        android:id="@+id/button_snackbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snackbar"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/common_text_size_14"
        android:onClick="openSnackbarActivity"/>
    <Button
        android:id="@+id/button_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progress"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/common_text_size_14"
        android:onClick="openProgressIndicatiors"/>
  <Button
        android:id="@+id/button_introslider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introslider"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/common_text_size_14"
        android:onClick="openIntroslider"/>


</LinearLayout>
