<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_snack_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/button_simple_snackbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simple_snackbar" />

    <Button
        android:id="@+id/button_action_snackbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_snackbar"
        android:layout_below="@id/button_simple_snackbar"/>

    <Button
        android:id="@+id/button_custom_snackbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_snackbar"
        android:layout_below="@id/button_action_snackbar"/>
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/layout_fab"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"/>


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/floating_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        app:fab_expandDirection="left"

        app:layout_behavior="com.example.synerzip.aapoc.FloatingActionButtonBehavior"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true">


        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_call"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:src="@android:drawable/ic_menu_call"
            app:rippleColor="#03A9F4"

            app:fab_size="mini"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_chat"
            android:layout_width="5dp"
            android:layout_height="5dp"
            app:rippleColor="#03A9F4"
            app:fab_size="mini"
            android:src="@android:drawable/sym_action_chat"
         />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>
    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>